// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Catches errors 1`] = `
<withErrorBoundary(ComponentThatBreaks)>
  <ErrorBoundary
    hasError={true}
  >
    <h1>
      Yikes, something went wrong.
    </h1>
  </ErrorBoundary>
</withErrorBoundary(ComponentThatBreaks)>
`;

exports[`Excepts a different error component 1`] = `
<withErrorBoundary(ComponentThatBreaks)>
  <ErrorBoundary
    hasError={true}
  >
    <Component
      hasError={true}
    >
      <h1>
        Wow, an error...
      </h1>
    </Component>
  </ErrorBoundary>
</withErrorBoundary(ComponentThatBreaks)>
`;
